welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:37: error: ';' expected but ')' found.
   	d= false)
                ^